
=item *

Fixed a possible plaintext command injection during the negotiation of a
TLS layer.  The vulnerability detailed in CVE-2011-0411 affects the STARTTLS
and AUTHINFO SASL commands.  B<nnrpd> now resets its read buffer upon a
successful negotiation of a TLS layer.  It prevents malicious commands, sent
unencrypted, from being executed in the new encrypted state of the session.

=item *

B<cnfsheadconf> now properly recognizes continuation lines in
F<cycbuff.conf>, that is to say lines ending with a backslash (C<\>).
Thanks to John S<F. Morse> for the bug report.

=item *

The order of CNFS buffers in a metacycbuff is now properly read and written
by B<cnfsheadconf>.  There previoulsy was a confusion between hexadecimal
and decimal values.  Thanks again to John S<F. Morse>.

=item *

A single header field line is limited to 998 bytes, per S<RFC 5536>.  B<innd>
was previously accepting, and also generating Xref: header field lines,
up to 1022 bytes.  Now, B<nnrpd> (acting as an injecting agent) rejects
articles which contain header field lines whose length exceeds 998 bytes.
And B<innd> (acting as a relaying or serving agent) no longer checks that.

=item *

B<nnrpd> advertises the COUNTS, DISTRIBUTIONS, MODERATORS, MOTD and
SUBSCRIPTIONS variants of the LIST command in response to CAPABILITIES.
These commands already existed in B<nnrpd> but S<RFC 6048> had not yet
been published.

=item *

Add support for LIST MOTD in B<innd>.  Consequently, the F<motd.news>
configuration file which was previously used only by B<nnrpd> is renamed
to F<motd.nnrpd> (B<innupgrade> takes care of the rename).  B<innd> uses
the new F<motd.innd> file in I<pathetc> for its message of the day.

=item *

Fixed an issue at configure time that made INN wrongly assume that OpenBSD
(4.6) didn't support Unix-domain sockets.  Thanks to Wim Lewis for the patch.

=item *

Fixed an issue in the Python access hook for B<nnrpd>:  it has not been